# kafka-pipeline

./: .gitignore  LICENSE  README.md
example/: consumer.py  producer.py
example/avro-schemas/: test_topic-value.json
example/config/: config.json  config_loader.py
img/: example_pipeline.vsdx
kafka_client/: publish.sh  pyproject.toml
kafka_client/src/kafka_client/: cluster_admin.py  kafka_client.py  kafka_config.py  schema_registry.py
kafka_client/src/kafka_client/kafka_pipeline/pipeline/: kafka_pipeline.py  pipeline_stage.py
kafka_client/tests/: connecting_to_kafka_cluster.py  test_consuming_kafka_topic.py  test_publishing_to_kafka_topic.py  test_topic_schema.json
kafka_client/tests/docker_pipeline/: build_push_all.sh  docker-compose.yml  run.sh
kafka_client/tests/docker_pipeline/schema/: stage_three.json
kafka_client/tests/docker_pipeline/stage_one/: Dockerfile  app.py
kafka_client/tests/docker_pipeline/stage_three/: Dockerfile  app.py
kafka_client/tests/docker_pipeline/stage_two/: Dockerfile  app.py
kafka_client/tests/kafka_client/: requirements.txt  test_consuming_kafka_topic.py
kafka_client/tests/mpp_pipeline/: mpp_pipeline.py
kafka_client/tests/mpp_pipeline/schema/: stage_one.json  stage_two.json
kafka_cluster/: .env  docker-compose.yml  network-deployment.yml  one-machine-deployment.yml
